--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link rel="stylesheet" href="./assets/css/com.css">
 
     <!-- Título da Página -->
-    <title>Como economizar até 56% de combustivel a partir de hoje</title>
+    <title>5 passos simples que fazem o consumo de combustível cair pela metade em 30 dias</title>
     
     <style type="text/css">
       body {
