--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <img class="img-fluid" src="./assets/img/ultrasecreto.svg">
 
             <!-- Headline -->
-            <h3 class="my-4"><b>ECONOMIZEI 56% DE COMBUSTÍVEL SEM PRECISAR ALTERAR NADA EM MEU VEÍCULO</b></h3>
+            <h3 class="my-4"><b>5 passos simples que fazem o consumo de combustível cair pela metade em 30 dias</b></h3>
 
             <!-- VSL -->
             <script type="text/javascript" id="scr_622cb044a0f92a0008bcad37">var s=document.createElement("script");s.src="https://cdn.converteai.net/968cd479-dc26-4ffd-9334-d52426908190/players/622cb044a0f92a0008bcad37/player.js",s.async=!0,document.head.appendChild(s);</script>
